# cc-python-client-auth

./: .env-example  .gitignore  .pre-commit-config.yaml  Makefile  Pipfile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
cc_python_client_auth/: __init__.py  client_auth.py  client_requests.py
cc_python_client_auth.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
client_auth/: __init__.py  client_auth.py  client_requests.py  utils.py
tests/: conftest.py  test_client_auth.py
