[coverage:run]
branch = True

[doc8]
max-line-length = 119

[flake8]
exclude = *.egg-info/*,build/*,.eggs/*
ignore = B008, E501, W503
max-line-length = 80
select = B, B950, C, D, E, F, W

[isort]
include_trailing_comma = true
line_length = 88
lines_after_imports = 2
multi_line_output = 3
sections = FUTURE, STDLIB, THIRDPARTY, FIRSTPARTY, LOCALFOLDER
skip = .egg-info,build,.eggs

[metadata]
author = Croud
author_email = tech@croud.com
name = cc-python-client-auth
version = 0.1
description = Croud Client Auth
url = https://github.com/CroudTech/cc-python-client-auth

[options]
packages = find:
include_package_data = True
install_requires =
    requests
    pyjwt
